2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: *.qtl files are
	QuickTime Media Links as per
	http://developer.apple.com/documentation/QuickTime/QT6WhatsNew/Chap1/chapter_1_section_53.html

2006-08-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Move the Quicktime metalink magic
	to its own mime-type: application/x-quicktime-media-link

2006-07-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/x-snes-rom and
	application/x-gba-rom types for SNES and GBA Roms (Closes: #7511)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info.pc.in: patch from foser@gentoo.org to use
	the paths specified at build-time in the pkgconfig file
	(Closes: #6437)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add description and acronym to the
	GDBM mime-type (Closes: #6353)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.mo as a glob for
	application/x-gettext-translation (Closes: #6351)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Arthur Taylor <art@ified.ca> to
	add magic to most tracker files, and remove a duplicate *.xm glob
	(Closes: #6372)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: remove the magic for
	application/octet-stream, it's silly (Closes: #4843)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Matthias Clasen
	<mclasen@redhat.com> to match Type1 fonts higher than Postscript files
	(Closes: #4675)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add magic for audio/ac3 (Closes: #6509)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add audio/x-ape mime-type for
	Monkey's audio (Closes: #6747)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: remove po/stamp-it on "make clean" (Closes: #6485)
