@@ -1832,6 +1832,25 @@ command to generate the output files.
     </magic>
     <glob pattern="*.ac3"/>
   </mime-type>
+  <mime-type type="audio/AMR">
+    <_comment>AMR audio</_comment>
+    <acronym>AMR</acronym>
+    <expanded-acronym>Adaptive Multi-Rate</expanded-acronym>
+    <magic priority="50">
+      <match type="string" value="#!AMR\n" offset="0"/>
+      <match type="string" value="#!AMR_MC1.0\n" offset="0"/>
+    </magic>
+    <glob pattern="*.amr"/>
+  </mime-type>
+  <mime-type type="audio/AMR-WB">
+    <_comment>AMR-WB audio</_comment>
+    <expanded-acronym>Adaptive Multi-Rate Wideband</expanded-acronym>
+    <magic priority="50">
+      <match type="string" value="#!AMR-WB\n" offset="0"/>
+      <match type="string" value="#!AMR-WB_MC1.0\n" offset="0"/>
+    </magic>
+    <glob pattern="*.awb"/>
+  </mime-type>
   <mime-type type="audio/basic">
     <_comment>ULAW (Sun) audio</_comment>
     <magic priority="40">
