@@ -1,3 +1,8 @@
+2006-08-24  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add audio/AMR and audio/AMR-WB as per
+	RFC 3267, using the magic in section 8.1
+
 2006-08-12  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: *.qtl files are
